<resources>
    <string name="app_name">Passwords Saver</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_text_view_signup">Don\'t have an account?</string>
    <string name="login_button_signup">Sign Up</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="signup_button_signup">Sign Up</string>
    <string name="signup_edit_text_confirm_password">Confirm your password</string>
    <string name="add_data_edit_text_account">Account of</string>
    <string name="add_data_edit_text_username">Username</string>
    <string name="add_data_edit_text_password">Password</string>
    <string name="add_data_button_save">Save</string>
    <string name="add_data_button_cancel">Cancel</string>
    <string name="account_data_button_save">Save</string>
    <string name="account_data_button_cancel">Cancel</string>
    <string name="info_menu_edit">Edit</string>
    <string name="info_menu_delete">Delete</string>
    <string name="main_menu_create_account">Create account</string>
    <string name="main_menu_logout">Log out</string>
    <string name="main_menu_create_category">Create category</string>
    <string name="main_menu_delete_category">Delete category</string>
    <string name="log_in">Log in</string>
    <string name="login_incorrect_password">Incorrect password</string>
    <string name="login_incorrect_username">Incorrect username</string>
    <string name="database_unavailable">Database unavailable</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_someone_use_that_username">Someone already has that username. Try again</string>
    <string name="sign_up_passwords_dont_match">These passwords don\'t match. Try again.</string>
    <string name="sign_up_correct_text">You can use small letters, numbers and full stop, more over, you have to use more than 7 character</string>
    <string name="main_deleting_favorite">You can\'t delete Favorites category</string>
    <string name="main_save">Save</string>
    <string name="main_cancel">Cancel</string>
    <string name="main_delete_category">Delete this category</string>
    <string name="main_confirm_deleting">Are you sure you want to delete this category?</string>
    <string name="add_data_empty_input_box">You can\'t leave any input boxes empty</string>
    <string name="add_new_account">Add new account</string>
    <string name="account_details">Account details</string>
    <string name="changes_saved">Changes saved</string>
    <string name="account_data_delete_account">Delete account</string>
    <string name="account_data_are_you_sure">Are you sure you want to delete this account?</string>
    <string name="main_empty_input_box">You can\'t leave this input box empty.</string>
</resources>
