<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_delete_category"
        android:icon="@drawable/ic_action_delete_account"
        android:title="@string/main_menu_delete_category"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/action_create_category"
        android:icon="@drawable/ic_action_create_category"
        android:title="@string/main_menu_create_category"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/action_create_account"
        android:icon="@drawable/ic_action_create_account"
        android:title="@string/main_menu_create_account"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/main_menu_logout"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>
</menu>