<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.hussainabdelilah.passwordsaver.LoginActivity">
    <EditText
        android:id="@+id/loginEditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@drawable/login_edit_text_shape"
        android:ems="10"
        android:hint="@string/login_username"
        android:paddingLeft="15dp"
        android:textSize="25sp"
        android:inputType="textPersonName"
        android:maxLength="10"/>
    <EditText
        android:id="@+id/loginEditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/login_edit_text_shape"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textSize="25sp"
        android:maxLength="15"/>

    <Button
        android:id="@+id/loginButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/login_button_login_shape"
        android:onClick="onClickLoginButton"
        android:text="@string/login_login"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginTextViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/login_text_view_signup"
            android:textSize="15sp" />

        <Button
            android:id="@+id/loginButtonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:onClick="onClickSignUpButton"
            android:text="@string/login_button_signup" />
    </LinearLayout>
</LinearLayout>


